# InterviewAgent

./: README.md  extracting_resume_info.ipynb  main.py  pyproject.toml  resume_preprocessing.ipynb  run.py
src/evaluation/: evaluate.py  example.py
src/generate_question/: generate.py  models.py
src/llms/: providers.py
src/resume_extract/: main.py  parser_items.py  prompts.py  resume_reader.py
